--- a/myenv.yml
+++ b/myenv.yml
@@ -1,13 +1,16 @@
 
 name: project_environment
 dependencies:
-- python=3.6.2
+- python=3.6.9
 
 - pip:
-  - fastai
+  - fastai==1.0.60
+  - torch==1.3.1
   - azureml-defaults
   - azureml-core
   - joblib==0.14.1
   - matplotlib==3.1.2
-- numpy
-- pillow<7
+- numpy==1.16.2
+- Pillow==6.2.0
+- pandas==0.23.4
+
