--- a/image-classification/deployment-using-cli/inferenceConfig.json
+++ b/image-classification/deployment-using-cli/inferenceConfig.json
@@ -35,7 +35,7 @@
                         ]
                     }
                 ],
-                "name": "myenv"
+                "name": "project_environment"
             },
             "condaDependenciesFile": null,
             "interpreterPath": "python",
