--- a/image-classification/deployment-using-cli/scoring-env.yml
+++ b/image-classification/deployment-using-cli/scoring-env.yml
@@ -3,7 +3,13 @@ dependencies:
   - python=3.6.9
   - pip:
     - azureml-defaults
-    - scikit-learn
-    - joblib
-    - numpy
-    - inference-schema[numpy-support]
+    - fastai==1.0.60
+    - torch
+    - torchvision
+    - azureml-defaults
+    - azureml-core
+    - matplotlib==3.1.2
+    - numpy==1.16.2
+    - Pillow==6.2.0
+    - pandas==0.23.4
+   
