--- a/image-classification/deployment-using-cli/inferenceConfig.json
+++ b/image-classification/deployment-using-cli/inferenceConfig.json
@@ -31,6 +31,9 @@
                             "matplotlib==3.1.2",
                             "numpy==1.16.2",
                             "Pillow==6.2.0",
+                            "urllib",
+                            "json",
+                            "os",
                             "pandas==0.23.4"
                         ]
                     }
